--- a/ZOHO_CONTACTS/src/main/webapp/css/styles.css
+++ b/ZOHO_CONTACTS/src/main/webapp/css/styles.css
@@ -1,10 +1,96 @@
 * {
 	padding: 0;
 	margin: 0;
+color:white;
+	background-color:#272727;
 	box-sizing: border-box;
 	font-family: 'Montserrat', sans-serif;
 	scroll-behavior: smooth;
 }
+
+:root{
+	
+	
+	
+	
+	--body-color:#E4E9F7;
+	--sidebar-color:#FFF;
+	--primary-yellow:#f5c211;
+	--primary-green:#14A76c;
+	--primary-red:#FF652F;
+	--primary-color:#A294F9;
+	--primary-color-light:#747474;
+	--toggle-color:#DDD;
+	--text-color:#707070;
+	
+	
+	--trans-02:all 0.2s ease;
+	--trans-03:all 0.3s ease;
+	--trans-04:all 0.4s ease;
+	--trans-05:all 0.5s ease;
+}
+
+
+.input{
+	
+	
+	width: 230px;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	margin-top: 5px;
+	
+}
+
+
+.loginlabel{
+	
+		margin-top: 10px;
+	font-weight: bold;
+	display: block;
+}
+
+#logincontainer{
+	background: white;
+	padding: 20px;
+	border-radius: 8px;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+	width: 300px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	
+	
+	
+}
+
+#registration-form{
+	
+	
+	background-color:white;
+	padding: 20px;
+	border-radius: 8px;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+	width: 300px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+
+#loginfooter{
+	
+	
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
+	
+	background-color:white;
+	color:black;
+}
+
+
+
 
 
 
@@ -34,19 +120,19 @@
 	text-decoration: none;
 	font-size: 16px;
 	font-weight: 600;
-	color: #1a1a1a;
+	color:white;
 	transition: 0.3s ease;
 }
 
 #navbar li a:hover, #navbar li a.active {
-	color: #088178;
+	color:#DBFF3D;
 }
 
 #navbar li a.active::after, #navbar li a:hover::after {
 	content: "";
 	width: 30%;
 	height: 2px;
-	background: #088178;
+	background:#DBFF3D;
 	position: absolute;
 	bottom: -4px;
 	left: 20px;
@@ -58,7 +144,7 @@ table, th, td {
 }
 
 thead  th {
-	background-color: #d5d1defe;
+	background-color: #747474;
 }
 
 tbody tr:hover {
@@ -67,19 +153,21 @@ tbody tr:hover {
 }
 
 #main {
+	background-color:#272727;
 	width: 100%;
 	margin-top: 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	position:relative;
 }
 
 #tableContainer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: #fff5;
+	background-color:#272727;
 	box-shadow: 0 .4rem .8rem #0005;
 	border-radius: .8rem;
 	overflow: hidden;
@@ -92,18 +180,19 @@ tbody tr:hover {
 	justify-content: space-between;
 	width: 100%;
 	height: 10%;
-	background-color: #fff4;
+	background-color:#272727;
 	padding: .8rem 1rem;
 }
 
 #tableHeader {
 	display:flex;
+	font-size: 40px;
 	justify-content:center;
 	align-items:center;
 	width: 100%;
 	height:100%;
 	
-	background-color: #fff4;
+	background-color:#272727;
 	padding: .8rem 1rem;
 }
 #addbutton{
@@ -119,22 +208,25 @@ tbody tr:hover {
 	background-color: #fffb;
 }
 
-.glowbutton {
+
+
+.glowredbutton {
    font-family: 'Helvetica', 'Arial', sans-serif;
   display: inline-block;
-  font-size: 1em;
-  padding: 1em 2em;
+  font-size: 20px;
+  padding: 15px 20px;
+ font-weight:900;
  
   -webkit-appearance: none;
   appearance: none;
-  background-color: #ff0081;
+  background-color:var(--primary-red);
   color: #fff;
   border-radius: 4px;
   border: none;
   cursor: pointer;
   position: relative;
   transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
-  box-shadow: 0 2px 25px rgba(255, 0, 130, 0.5);
+  box-shadow: 0 2px 25px #f66151;
   
   &:focus {
     outline: 0;
@@ -156,15 +248,15 @@ tbody tr:hover {
     display: none;
     top: -75%;
     background-image:  
-      radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle,  transparent 20%, #ff0081 20%, transparent 30%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%), 
-    radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle,  transparent 10%, #ff0081 15%, transparent 20%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%);
+      radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 20%, var(--primary-red) 20%, transparent 30%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%), 
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 10%,var(--primary-red) 15%, transparent 20%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%);
   background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
   background-position: 0% 80%, -5% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 85% 30%;
   }
@@ -173,22 +265,21 @@ tbody tr:hover {
     display: none;
     bottom: -75%;
     background-image:  
-    radial-gradient(circle, #ff0081 20%, transparent 20%), 
-    radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle,  transparent 10%, #ff0081 15%, transparent 20%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%),
-    radial-gradient(circle, #ff0081 20%, transparent 20%);
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%), 
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 10%,var(--primary-red) 15%, transparent 20%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-red) 20%, transparent 20%);
   background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
   background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
   }
  
   &:active{
     transform: scale(0.9);
-    background-color: darken(#ff0081, 5%);
-    box-shadow: 0 2px 25px rgba(255, 0, 130, 0.2);
-  }
+    background-color: darken(var(--primary-red), 5%);
+    box-shadow: 0 2px 25px rgb(204, 193, 255)  }
   
   &.animate{
     &:before{
@@ -201,6 +292,172 @@ tbody tr:hover {
     }
   }
 }
+
+.glowyellowbutton {
+   font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+  font-size: 20px;
+  padding: 15px 20px;
+ font-weight:900;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color:var(--primary-yellow);
+  color: #fff;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+  box-shadow: 0 2px 25px #f9f06b;
+  
+  &:focus {
+    outline: 0;
+  }
+  
+  &:before, &:after{
+    position: absolute;
+    content: '';
+    display: block;
+    width: 140%;
+    height: 100%;
+    left: -20%;
+    z-index: -1000;
+    transition: all ease-in-out 0.5s;
+    background-repeat: no-repeat;
+  }
+  
+  &:before{
+    display: none;
+    top: -75%;
+    background-image:  
+      radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 20%, var(--primary-yellow) 20%, transparent 30%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%), 
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 10%,var(--primary-yellow) 15%, transparent 20%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%);
+  background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
+  background-position: 0% 80%, -5% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 85% 30%;
+  }
+  
+  &:after{
+    display: none;
+    bottom: -75%;
+    background-image:  
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%), 
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 10%,var(--primary-yellow) 15%, transparent 20%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-yellow) 20%, transparent 20%);
+  background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+  background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+  }
+ 
+  &:active{
+    transform: scale(0.9);
+    background-color: darken(var(--primary-yellow), 5%);
+    box-shadow: 0 2px 25px rgb(204, 193, 255)  }
+  
+  &.animate{
+    &:before{
+      display: block;
+      animation: topBubbles ease-in-out 0.75s forwards;
+    }
+    &:after{
+      display: block;
+      animation: bottomBubbles ease-in-out 0.75s forwards;
+    }
+  }
+}
+
+.glowgreenbutton {
+   font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+ font-size: 20px;
+  padding: 15px 20px;
+ font-weight:900;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color:var(--primary-green);
+  color: #fff;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+  box-shadow: 0 2px 25px #8ff0a4;
+  
+  &:focus {
+    outline: 0;
+  }
+  
+  &:before, &:after{
+    position: absolute;
+    content: '';
+    display: block;
+    width: 140%;
+    height: 100%;
+    left: -20%;
+    z-index: -1000;
+    transition: all ease-in-out 0.5s;
+    background-repeat: no-repeat;
+  }
+  
+  &:before{
+    display: none;
+    top: -75%;
+    background-image:  
+      radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 20%, var(--primary-green) 20%, transparent 30%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%), 
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 10%,var(--primary-green) 15%, transparent 20%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%);
+  background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
+  background-position: 0% 80%, -5% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 85% 30%;
+  }
+  
+  &:after{
+    display: none;
+    bottom: -75%;
+    background-image:  
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%), 
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,  transparent 10%,var(--primary-green) 15%, transparent 20%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%),
+    radial-gradient(circle,var(--primary-green) 20%, transparent 20%);
+  background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+  background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+  }
+ 
+  &:active{
+    transform: scale(0.9);
+    background-color: darken(var(--primary-green), 5%);
+    box-shadow: 0 2px 25px rgb(204, 193, 255)  }
+  
+  &.animate{
+    &:before{
+      display: block;
+      animation: topBubbles ease-in-out 0.75s forwards;
+    }
+    &:after{
+      display: block;
+      animation: bottomBubbles ease-in-out 0.75s forwards;
+    }
+  }
+}
+
+
 
 
 @keyframes topBubbles {
@@ -227,24 +484,7 @@ tbody tr:hover {
   }
 }
 
-:root{
-	
-	
-	
-	
-	--body-color:#E4E9F7;
-	--sidebar-color:#FFF;
-	--primary-color:#695CFE;
-	--primary-color-light:#F6F5FF;
-	--toggle-color:#DDD;
-	--text-color:#707070;
-	
-	
-	--trans-02:all 0.2s ease;
-	--trans-03:all 0.3s ease;
-	--trans-04:all 0.4s ease;
-	--trans-05:all 0.5s ease;
-}
+
 
 #sidebar{
 	
@@ -253,18 +493,30 @@ tbody tr:hover {
 
 	align-items:center;
 	
-
+z-index:100;
 	position:fixed;
 	top:0;
 	left:0;
-	width:500px;
+	width:100vw;
 	height: 100%;
-	background: var(--primary-color-light);
+	background: rgba(0,0,0,0.3);
+	backdrop-filter: blur(10px);
+	justify-content: center;
+
 	
 }
 
 
-
+#closecreatemodel{
+	position:absolute;
+	right:0px;
+	top:0;
+	height:50px;
+	width:50px;
+	background:red;
+	border:none;
+	font-weight: 900;
+}
 #viewsidebar{
 	
 	display:none;
@@ -282,14 +534,50 @@ tbody tr:hover {
 	
 }
 
-#headernav{
-	
-	display:flex;
-	flex-direction:row;
-	justify-content: space-between;
+#creategroup{
+	position:relative;
+
+   h1{
+   
+   font-size:40px;
+   margin:10px;
+   }
+   
+  #createtablecontainer{
+   
+   max-height: 500px;
+   overflow: auto;
+   }
 }
 
 
+
+
+#table{
+	
+	   max-height: 500px;
+   overflow: auto;
+   
+   
+}
+
+#table thead{
+	
+	
+	position: sticky;
+	top:0;
+	z-index:1;
+	
+}
+
+
+
+#groupNamecreate{
+	width:65%;
+	margin:10px;
+	height:45px;
+	text-indent:20px;
+}
 
 @-webkit-keyframes slideIn {
   from {left: -300px; opacity: 0} 
